--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,19 +88,19 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5376]
+[INFO]  [/sys/router] main memory [total=>7168]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
-[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 758 bytes)
+[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 795 bytes)
 [INFO]  [/sys/router] 
   [
     router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
     scheduler=>[def_stack_size=>8096]
-    mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true]
+    mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true,max_size=>50]
     wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
     ota=>[host=>mdns://fhatos_client:3232]
-    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288]
+    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]
     fs=>[root=>./data/fs]
   ]@/boot/config
 [INFO]  [/sys/router] router boot config dropped
@@ -130,8 +130,8 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router] mqtt boot config dropped
 [INFO]  [/mnt/bus] mapping /bus==>//io
 [INFO]  [/sys/router] bus /mnt/bus spanning /bus/# mounted
-[INFO]  [/io/console] thread spawned: inst()[cpp]
 [INFO]  [/sys/router] /io/console obj loaded
+[INFO]  [/io/console] thread spawned: inst()[cpp]
 [INFO]  [/sys/router] console boot config dropped
 ----
 
@@ -283,29 +283,31 @@ The [.h]#mmADT# language is embedded in the fURI address space thus enabling htt
 ----
 fhatos> */mmadt/#/
 =>[
-==>/mmadt/a=>a(type=>_)[cpp]
+==>/mmadt/a=>a(_)[cpp]
 ==>/mmadt/apply=>apply?obj{*}<=obj(rhs=>noobj,args=>[=>])[cpp]
-==>/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/at=>at?obj{?}<=obj{?}(from(0?var,noobj)[cpp])[cpp]
-==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(from(0?barrier_op,_)[cpp])[cpp]
+==>/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/at=>at?obj{?}<=obj{?}(isa(/mmadt/uri))[cpp]
+==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(_)[cpp]
 ==>/mmadt/bcode=>[bcode][_]
-==>/mmadt/bcode/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/block=>block?obj<=obj{?}(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bcode/::/mmadt/inspect=>inspect(isa(/mmadt/bool))[cpp]
+==>/mmadt/block=>block?obj<=obj{?}(_)[cpp]
 ==>/mmadt/bool=>[bool][_]
-==>/mmadt/bool/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/bool/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/bool/::/mmadt/div=>div(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/inspect=>inspect(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/minus=>minus(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/mult=>mult(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/neg=>neg(isa(/mmadt/bool))[cpp]
+==>/mmadt/bool/::/mmadt/plus=>plus(isa(/mmadt/bool))[cpp]
+==>/mmadt/chain=>chain(_)[cpp]
+==>/mmadt/choose=>choose(_)[cpp]
 ==>/mmadt/count=>count?int<=objs{*}()[cpp]
-==>/mmadt/div=>div(from(0?rhs,noobj)[cpp])
-==>/mmadt/drop=>drop?obj{?}<=obj{?}(from(0?obj,_)[cpp])[cpp]
-==>/mmadt/each=>each(from(0?poly,noobj)[cpp])
+==>/mmadt/div=>div(_)
+==>/mmadt/drop=>drop?obj{?}<=obj{?}(isa(/mmadt/obj))[cpp]
+==>/mmadt/each=>each(isa(/mmadt/obj))
 ==>/mmadt/embed=>embed()[cpp]
 ==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
-==>/mmadt/eq=>eq(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/eq=>eq(_)[cpp]
 ==>/mmadt/error=>[error][_]
 ==>/mmadt/explain=>explain()[cpp]
 ==>/mmadt/ext/C=>C()[is(gte(-273.149994))]
@@ -314,119 +316,123 @@ fhatos> */mmadt/#/
 ==>/mmadt/ext/int16=>[int16][_]
 ==>/mmadt/ext/int32=>[int32][_]
 ==>/mmadt/ext/int8=>uint8()[is(gte(-127)).is(lte(128))]
-==>/mmadt/ext/ms=>[int][_]
+==>/mmadt/ext/ms=>[real][_]
+==>/mmadt/ext/ms/::/mmadt/as=>as(is(eq(/mmadt/ext/sec)))[cpp]
 ==>/mmadt/ext/nat=>nat()[is(gte(0))]
 ==>/mmadt/ext/prnt=>prnt()[is(gte(0.000000)).is(lte(100.000000))]
-==>/mmadt/ext/sec=>[int][_]
+==>/mmadt/ext/sec=>[real][_]
 ==>/mmadt/ext/secret=>[str][_]
 ==>/mmadt/ext/secret/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
 ==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
+==>/mmadt/flip=>flip(_)[cpp]
 ==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
-==>/mmadt/from=>from?obj{?}<=obj{?}(from(0?uri,_)[cpp],from(1?default,noobj)[cpp])[cpp]
-==>/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])
-==>/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])
-==>/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])
+==>/mmadt/from=>from?obj{?}<=obj{?}(isa(/mmadt/uri),_)[cpp]
+==>/mmadt/gt=>gt(isa(/mmadt/obj))
+==>/mmadt/gte=>gte(isa(/mmadt/obj))
+==>/mmadt/inspect=>inspect(isa(/mmadt/obj))
 ==>/mmadt/inst=>[inst][_]
-==>/mmadt/inst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/inst/::/mmadt/inspect=>inspect(isa(/mmadt/inst))[cpp]
 ==>/mmadt/int=>[int][_]
-==>/mmadt/int/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/int/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/is=>is?obj{?}<=obj(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/int/::/mmadt/div=>div(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/gt=>gt(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/gte=>gte(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/inspect=>inspect(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/lt=>lt(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/lte=>lte(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/minus=>minus(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/mod=>mod(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/mult=>mult(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/neg=>neg(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/plus=>plus(isa(/mmadt/int))[cpp]
+==>/mmadt/is=>is?obj{?}<=obj(_)[cpp]
+==>/mmadt/isa=>isa?obj{?}<=obj(_)[cpp]
+==>/mmadt/lift=>lift(_)[cpp]
 ==>/mmadt/lock=>lock(user=>_)[cpp]
 ==>/mmadt/lshift=>lshift()
 ==>/mmadt/lst=>[lst][_]
-==>/mmadt/lst/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/each=>each(from(0?lst,_)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/split=>split(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/lst/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])
-==>/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])
-==>/mmadt/map=>map?obj{?}<=obj{?}(from(0?mapping,noobj)[cpp])[cpp]
-==>/mmadt/merge=>merge?obj{?}<=obj(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])
+==>/mmadt/lst/::/mmadt/div=>div(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/each=>each(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/inspect=>inspect(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst()[cpp]
+==>/mmadt/lst/::/mmadt/minus=>minus(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/mult=>mult(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/plus=>plus(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/split=>split(isa(/mmadt/lst))[cpp]
+==>/mmadt/lst/::/mmadt/within=>within(_)[cpp]
+==>/mmadt/lt=>lt(isa(/mmadt/obj))
+==>/mmadt/lte=>lte(isa(/mmadt/obj))
+==>/mmadt/map=>map?obj{?}<=obj{?}(_)[cpp]
+==>/mmadt/merge=>merge?obj{?}<=obj()[cpp]
+==>/mmadt/minus=>minus(_)
 ==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
-==>/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])
-==>/mmadt/neg=>neg(from(0?self,_)[cpp])
-==>/mmadt/neq=>neq(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/mult=>mult(_)
+==>/mmadt/neg=>neg(isa(/mmadt/obj))
+==>/mmadt/neq=>neq(_)[cpp]
 ==>/mmadt/noobj=>[noobj][_]
 ==>/mmadt/obj=>[obj][_]
 ==>/mmadt/objs=>[objs][_]
-==>/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])
-==>/mmadt/print=>print?obj{?}<=obj{?}(from(0?to_print,_)[cpp])[cpp]
+==>/mmadt/plus=>plus(_)
+==>/mmadt/print=>print?obj{?}<=obj{?}(_)[cpp]
 ==>/mmadt/prod=>prod?obj<=objs{*}()[cpp]
 ==>/mmadt/real=>[real][_]
-==>/mmadt/real/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
-==>/mmadt/real/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/real/::/mmadt/div=>div(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/gt=>gt(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/gte=>gte(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/inspect=>inspect(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/lt=>lt(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/lte=>lte(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/minus=>minus(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/mult=>mult(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/neg=>neg(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/plus=>plus(isa(/mmadt/real))[cpp]
 ==>/mmadt/rec=>[rec][_]
-==>/mmadt/rec/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/lshift=>lshift(level=>1)[cpp]
-==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/rshift=>rshift(from(0?prefix,noobj)[cpp])[cpp]
-==>/mmadt/rec/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
-==>/mmadt/ref=>ref?obj{?}<=obj{?}(from(0?id,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/div=>div(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/inspect=>inspect(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/lshift=>lshift(isa(/mmadt/int))[cpp]
+==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec()[cpp]
+==>/mmadt/rec/::/mmadt/minus=>minus(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/mult=>mult(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/plus=>plus(isa(/mmadt/rec))[cpp]
+==>/mmadt/rec/::/mmadt/rshift=>rshift(isa(/mmadt/uri))[cpp]
+==>/mmadt/rec/::/mmadt/within=>within(_)[cpp]
+==>/mmadt/ref=>ref?obj{?}<=obj{?}(_,true)[cpp]
 ==>/mmadt/repeat=>repeat(from(0?code,noobj)[cpp],from(1?until,true)[cpp],from(2?emit,false)[cpp])[cpp]
 ==>/mmadt/rshift=>rshift()
-==>/mmadt/split=>split(from(0?poly,noobj)[cpp])[cpp]
-==>/mmadt/start=>start?objs{*}<=noobj{.}(from(0?starts,noobj)[cpp])[cpp]
+==>/mmadt/split=>split(_)[cpp]
+==>/mmadt/start=>start?objs{*}<=noobj{.}(_)[cpp]
 ==>/mmadt/str=>[str][_]
-==>/mmadt/str/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/str/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/str/::/mmadt/div=>div(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/gt=>gt(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/gte=>gte(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/inspect=>inspect(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/lt=>lt(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/lte=>lte(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str()[cpp]
+==>/mmadt/str/::/mmadt/minus=>minus(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/mult=>mult(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/plus=>plus(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/within=>within(_)[cpp]
 ==>/mmadt/sum=>sum?obj<=objs{*}()[cpp]
-==>/mmadt/to=>to(from(0?uri,noobj)[cpp],from(1?retain,true)[cpp])[cpp]
-==>/mmadt/type=>type?uri<=obj{?}(from(0?obj,_)[cpp])[cpp]
+==>/mmadt/to=>to(_,true)[cpp]
+==>/mmadt/type=>type?uri<=obj{?}(_)[cpp]
 ==>/mmadt/uri=>[uri][_]
-==>/mmadt/uri/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lshift=>lshift(level=>1)[cpp]
-==>/mmadt/uri/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri(from(0?count,2147483647)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
-==>/mmadt/uri/::/mmadt/rshift=>rshift(level=>1)[cpp]
-==>/mmadt/within=>within(from(0?code,noobj)[cpp])
+==>/mmadt/uri/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/div=>div(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/gt=>gt(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/gte=>gte(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/inspect=>inspect(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/lshift=>lshift(isa(/mmadt/int))[cpp]
+==>/mmadt/uri/::/mmadt/lt=>lt(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/lte=>lte(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri()[cpp]
+==>/mmadt/uri/::/mmadt/minus=>minus(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/mult=>mult(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/plus=>plus(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/rshift=>rshift(isa(/mmadt/int))[cpp]
+==>/mmadt/within=>within(_)
 =>]
 ----
 
@@ -452,7 +458,7 @@ An `inst` written in C++.
 [source,mmadt]
 ----
 fhatos> *int::lt
-==>lt?bool<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
+==>lt?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
 ----
 
 ++++
@@ -545,6 +551,11 @@ The abstract syntax of a sugar-free `obj` is
 The mmADT language and its evaluation by a processor will be explained via an exploration of these substructures, where finer grained structures lie within each.
 
 ==== The Type
+
+[stem]
+++++
+\tt{obj} := \color{yellow}{\underline{\tt{type}}}(\tt{frame})[\tt{value}]@\tt{ref}
+++++
 
 There are 9 base types in mmADT. 6 [.h]#mono-types# and 3 [.h]#poly-types#. The mono-types are:
 
@@ -798,10 +809,11 @@ fhatos> */mmadt/ext/#/
 ==>/mmadt/ext/int16=>[int16][_]
 ==>/mmadt/ext/int32=>[int32][_]
 ==>/mmadt/ext/int8=>uint8()[is(gte(-127)).is(lte(128))]
-==>/mmadt/ext/ms=>[int][_]
+==>/mmadt/ext/ms=>[real][_]
+==>/mmadt/ext/ms/::/mmadt/as=>as(is(eq(/mmadt/ext/sec)))[cpp]
 ==>/mmadt/ext/nat=>nat()[is(gte(0))]
 ==>/mmadt/ext/prnt=>prnt()[is(gte(0.000000)).is(lte(100.000000))]
-==>/mmadt/ext/sec=>[int][_]
+==>/mmadt/ext/sec=>[real][_]
 ==>/mmadt/ext/secret=>[str][_]
 ==>/mmadt/ext/secret/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
 ==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
@@ -838,8 +850,9 @@ fhatos> char['a']@a
 fhatos> char['b']@b
 ==>char['b']@b
 fhatos> @a + @b
-[ERROR] [/sys/type] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))]
+[ERROR] [/sys/scheduler] [/sys/type] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))]
 	  thrown at inst char['a']@a => plus(at(b))[cpp] [0=>char['a']@a]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + @b')[cpp] [code=>'@a + @b']
 fhatos> *a
 ==>char['a']@a
 fhatos> @a.as(str) + @b
@@ -874,14 +887,16 @@ fhatos> *nat
 fhatos> nat[12]
 ==>nat[12]
 fhatos> nat[-30]
-[ERROR] [/sys/type] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/type] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[-30]')[cpp] [code=>'nat[-30]']
 fhatos> nat[12]@a
 ==>nat[12]@a
 fhatos> @a.minus(11)
 ==>nat[1]@a
 fhatos> @a.minus(2)
-[ERROR] [/sys/type] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/type] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 	  thrown at inst nat[1]@a => minus(2)[cpp] [0=>2]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.minus(2)')[cpp] [code=>'@a.minus(2)']
 fhatos> *a
 ==>nat[1]@a
 ----
@@ -912,7 +927,8 @@ fhatos> C[0.0]
 fhatos> C[274.0]
 ==>C[274]
 fhatos> C[-274.0]
-[ERROR] [/sys/type] -274.000000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.149994))]
+[ERROR] [/sys/scheduler] [/sys/type] -274.000000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.149994))]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'C[-274.0]')[cpp] [code=>'C[-274.0]']
 ----
 
 ++++
@@ -924,48 +940,143 @@ fhatos> C[-274.0]
 
 ==== The Frame
 
-==== The Value
+[stem]
+++++
+\tt{obj} := \tt{type}(\color{yellow}{\underline{\tt{frame}}})[\tt{value}]@\tt{ref}
+++++
 
-==== The Reference
+The [.h]#frame# of an `obj` is a set of fURI named variables that are dereferenceably accessible within the value of the `obj`.
+If an `obj` has a specified frame, the `obj` is called an `inst` (instruction).
+An `inst` is a function
 
-Examples of the aforementioned types are provided below.
+[stem]
+++++
+f(\tt{obj}_\tt{in},a_1,a_2,\ldots,a_n) \mapsto \tt{obj}_\tt{out},
+++++
+
+where latexmath:[\tt{obj}_\tt{in}] is the _left hand side_ `obj` (input) and latexmath:[a_m] are the variables of the `obj` frame (arguments).
+
+For instance:
 
 ++++
-<!-- 🐖 ./main_runner.out "true" "42" "-64.02567" "'the fhatty'" "mmadt://a/furi" "[-1,'fhat',[0,1]]" "[a=>1,b=>'2',c=>3.0]" -->
+<!-- 🐖 ./main_runner.out
+int(a=>2)[*a]
+4 + int(a=>2)[*a]
+4 + int(a=>2)[+*a]
+-->
 ++++
 
 [source,mmadt]
 ----
-fhatos> true
-==>true
-fhatos> 42
-==>42
-fhatos> -64.02567
-==>-64.0257
-fhatos> 'the fhatty'
-==>'the fhatty'
-fhatos> mmadt://a/furi
-==>mmadt://a/furi
-fhatos> [-1,'fhat',[0,1]]
-=>[
-===>-1
-===>'fhat'
-=>[
-===>0
-===>1
-=>]
-=>]
-fhatos> [a=>1,b=>'2',c=>3.0]
-=>[
-==>a=>1
-==>b=>'2'
-==>c=>3.000000
-=>]
+fhatos> int(a=>2)[*a]
+==>2
+fhatos> 4 + int(a=>2)[*a]
+==>6
+fhatos> 4 + int(a=>2)[+*a]
+==>10
 ----
 
 ++++
 <!-- 🐓 -->
 ++++
+
+
+
+==== The Value
+
+[stem]
+++++
+\tt{obj} := \tt{type}(\tt{frame})[\color{yellow}{\underline{\tt{value}}}]@\tt{ref}
+++++
+
+The [.h]#value# of an `obj` is the datum specifying the __instance__ aspects of the `obj` within the boundaries of the __type__ aspects of the `obj`.
+
+==== The Reference
+
+[stem]
+++++
+\tt{obj} := \tt{type}(\tt{frame})[\tt{value}]@\color{yellow}{\underline{\tt{ref}}}
+++++
+
+The [.h]#reference# of an `obj` is a fURI denoting the location of the `obj` within the underlying structure.
+The [aqua]*F*​[lime]#h#​[yellow]*a*​[red]*T*​[fuchsia]*O*​[blue]#S#​ structure is the storage medium of all persistent `objs`.
+If an `obj` does not have a reference, then the `obj` is transient -- existing only within the data flow.
+When an `obj` has a reference, the `obj` encoding in the data flow (hardware main memory) and
+within the structure ([red]*F*​[aqua]*H*​[blue]*A*​[yellow]#t#​[lime]*O*​[fuchsia]*s*​ persistence) are synchronized.
+
+[tabs]
+====
+memory::
++
+--
+
+++++
+<!-- 🐖 ./main_runner.out
+a -> 'axel'
+*a
+*a + ' fantaxel'
+*a
+@a + ' fantaxel'
+*a
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> a -> 'axel'
+==>'axel'
+fhatos> *a
+==>'axel'
+fhatos> *a + ' fantaxel'
+==>'axel fantaxel'
+fhatos> *a
+==>'axel'
+fhatos> @a + ' fantaxel'
+==>'axel fantaxel'@a
+fhatos> *a
+==>'axel fantaxel'@a
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+thread::
++
+--
+
+++++
+<!-- 🐖 ./main_runner.out
+thread[[ /
+  loop=>from(a,0).plus(1).to(a).is(gt(10)).true.to(/abc/halt), /
+  halt=>false, /
+  delay=>nat[0]]]@abc
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> thread[[
+          loop=>from(a,0).plus(1).to(a).is(gt(10)).true.to(/abc/halt),
+          halt=>false,
+          delay=>nat[0]]]@abc
+=>thread[
+==>loop=>from(a,0).plus(1).to(a).is(gt(10)).map(true).to(/abc/halt)
+==>halt=>false
+==>delay=>nat[0]
+=>]@abc
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+====
+
+
+
 
 .Controlling Base Value Bit Encoding
 ====
@@ -988,31 +1099,19 @@ real[6.0].inspect()
 [source,mmadt]
 ----
 fhatos> int[6].inspect()
-=>[
-==>type=>[
-===>id=>/mmadt/int
-===>obj=>[int][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
-=>]
-==>value=>[
-===>obj=>6
-===>encoding=>int32_t
-=>]
-=>]
+[ERROR] [/sys/scheduler] [/mmadt/int] /mmadt/inspect inst unresolved 
+	         lhs id      inst id                        resolve obj                                                          
+	  ->[/mmadt/int] /mmadt/int/::/mmadt/inspect => inspect(isa(/mmadt/int))[cpp]
+	 -->[/mmadt/int] /mmadt/int/::/mmadt/inspect => inspect(isa(/mmadt/int))[cpp]
+	--->[/mmadt/int] /mmadt/inspect              => inspect(isa(/mmadt/obj))                 
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'int[6].inspect()')[cpp] [code=>'int[6].inspect()']
 fhatos> real[6.0].inspect()
-=>[
-==>type=>[
-===>id=>/mmadt/real
-===>obj=>[real][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/real,coeff=>[1,1]]
-=>]
-==>value=>[
-===>obj=>6.000000
-===>encoding=>float_t
-=>]
-=>]
+[ERROR] [/sys/scheduler] [/mmadt/real] /mmadt/inspect inst unresolved 
+	         lhs id       inst id                         resolve obj                                                           
+	  ->[/mmadt/real] /mmadt/real/::/mmadt/inspect => inspect(isa(/mmadt/real))[cpp]
+	 -->[/mmadt/real] /mmadt/real/::/mmadt/inspect => inspect(isa(/mmadt/real))[cpp]
+	--->[/mmadt/real] /mmadt/inspect               => inspect(isa(/mmadt/obj))                  
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'real[6.0].inspect()')[cpp] [code=>'real[6.0].inspect()']
 ----
 
 ++++
@@ -1055,8 +1154,9 @@ fhatos> @a + 1
 fhatos> @a + 1
 ==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/type] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
+[ERROR] [/sys/scheduler] [/sys/type] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
 	  thrown at inst int8[128]@a => plus(1)[cpp] [0=>1]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + 1                               // <3>')[cpp] [code=>'@a + 1                               // <3>']
 ----
 
 ++++
@@ -1084,18 +1184,18 @@ The wildcard feature of the fURI scheme makes it possible to access instructions
 ----
 fhatos> */mmadt/int/#
 ==>[int][[_]]
-==>as?obj<=int(from?obj<=obj(0?type,noobj)[cpp])[cpp]
-==>div?int<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>gt?bool<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>gte?bool<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>inspect?rec<=int(from?obj<=obj(0?inspected,_)[cpp])[cpp]
-==>lt?bool<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>lte?bool<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>minus?int<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>mod?int<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>mult?int<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
-==>neg?int<=int(from?obj<=obj(0?self,_)[cpp])[cpp]
-==>plus?int<=int(from?obj<=obj(0?rhs,noobj)[cpp])[cpp]
+==>as?obj<=int(isa?noobj<=obj(/mmadt/uri)[noobj])[cpp]
+==>div?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>gt?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>gte?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>inspect?rec<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>lt?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>lte?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>minus?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>mod?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>mult?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>neg?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>plus?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
 ----
 
 ++++
@@ -1616,9 +1716,19 @@ fhatos> age -> \|(is(gt(0)).is(lt(120)))
 fhatos> a -> age[45]
 ==>age[45]
 fhatos> *a.inspect()
-[ERROR] [/mmadt/bcode] 45 is not a /mmadt/bcode as defined by [bcode][_]
+[ERROR] [/sys/scheduler] [/mmadt/bcode] /mmadt/inspect inst unresolved 
+	         lhs id        inst id                          resolve obj                                                           
+	  ->[/mmadt/bcode] /mmadt/bcode/::/mmadt/inspect => inspect(isa(/mmadt/bool))[cpp]
+	 -->[/mmadt/bcode] /mmadt/bcode/::/mmadt/inspect => inspect(isa(/mmadt/bool))[cpp]
+	--->[/mmadt/bcode] /mmadt/inspect                => inspect(isa(/mmadt/obj))                  
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'*a.inspect()')[cpp] [code=>'*a.inspect()']
 fhatos> @a.inspect()
-[ERROR] [/mmadt/bcode] 45@a is not a /mmadt/bcode as defined by [bcode][_]
+[ERROR] [/sys/scheduler] [/mmadt/bcode] /mmadt/inspect inst unresolved 
+	         lhs id        inst id                          resolve obj                                                           
+	  ->[/mmadt/bcode] /mmadt/bcode/::/mmadt/inspect => inspect(isa(/mmadt/bool))[cpp]
+	 -->[/mmadt/bcode] /mmadt/bcode/::/mmadt/inspect => inspect(isa(/mmadt/bool))[cpp]
+	--->[/mmadt/bcode] /mmadt/inspect                => inspect(isa(/mmadt/obj))                  
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.inspect()')[cpp] [code=>'@a.inspect()']
 ----
 
 ++++
@@ -1638,22 +1748,14 @@ fhatos> a?sub -> |print(_)
 fhatos> a -> 12
 ==>12
 12fhatos> @a.inspect()
-=>[
-==>type=>[
-===>id=>/mmadt/int
-===>obj=>[int][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
-=>]
-==>value=>[
-===>id=>a
-===>obj=>12
-===>encoding=>int32_t
-=>]
-==>sub=>a(type=>_)[cpp]
-=>]
-12@afhatos> @a.plus(1)
-==>13@a
+[ERROR] [/sys/scheduler] [a] /mmadt/inspect inst unresolved 
+	         lhs id  inst id                        resolve obj                                                          
+	  ->[a] /mmadt/int/::/mmadt/inspect => inspect(isa(/mmadt/int))[cpp]
+	 -->[a] /mmadt/int/::/mmadt/inspect => inspect(isa(/mmadt/int))[cpp]
+	--->[a] /mmadt/inspect              => inspect(isa(/mmadt/obj))                 
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.inspect()')[cpp] [code=>'@a.inspect()']
+fhatos> @a.plus(1)
+12@a==>13@a
 13@afhatos> @a.plus(1).plus(1)
 ==>15@a
 ----
@@ -1689,12 +1791,14 @@ fhatos> /type/int/nat -> |is(gt(0))
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
-[ERROR] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[-6]')[cpp] [code=>'nat[-6]']
 fhatos> nat[3].plus(2)
 ==>nat[5]
 fhatos> nat[3].mult(-2)
-[ERROR] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/scheduler] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 	  thrown at inst nat[3] => mult(-2)[cpp] [0=>-2]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[3].mult(-2)')[cpp] [code=>'nat[3].mult(-2)']
 ----
 
 ++++
@@ -1814,7 +1918,7 @@ fhatos> *a                         // <2>
 fhatos> a?sub -> |to(b)            // <3>
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub                     // <4>
-==>a?bool<=obj(type=>_)[cpp]
+==>a?bool<=obj(_)[cpp]
 fhatos> a -> 'meangirl'            // <5>
 ==>'meangirl'
 fhatos> *b                         // <6>
@@ -2071,7 +2175,7 @@ a -> b
 [source,mmadt]
 ----
 fhatos> *a
-==>a?bool<=obj(type=>_)[cpp]
+==>a?bool<=obj(_)[cpp]
 fhatos> *b
 fhatos> b -> 12
 ==>12
@@ -2153,7 +2257,7 @@ a|
 fhatos> a?sub -> \|to(b)
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub
-==>a?bool<=obj(type=>_)[cpp]
+==>a?bool<=obj(_)[cpp]
 fhatos> *b
 fhatos> a->12
 ==>12
